--- a/chat.html
+++ b/chat.html
@@ -95,6 +95,7 @@
       margin-bottom: 14px;
     }
 
+    /* Aviso + Normas */
     .notice{
       background:#fff7ed;
       border:1px solid #fed7aa;
@@ -102,6 +103,7 @@
       border-radius: 12px;
       padding: 12px 12px;
       box-shadow:0 2px 8px rgba(0,0,0,0.06);
+      margin-bottom: 12px;
     }
     .notice strong{ color:#7c2d12; }
 
@@ -111,6 +113,15 @@
       text-decoration:none;
     }
     .notice a:hover{ text-decoration: underline; }
+
+    .rules{
+      margin: 10px 0 0;
+      padding-left: 18px;
+      color:#7c2d12;
+      font-size: 0.9rem;
+      line-height: 1.25rem;
+    }
+    .rules li{ margin: 4px 0; }
 
     /* Chat UI */
     .chat-wrap{
@@ -199,7 +210,7 @@
       border-radius: 12px;
       background:#fff;
       padding: 10px 10px;
-      height: 420px;
+      height: 460px;
       overflow:auto;
     }
 
@@ -244,13 +255,88 @@
       line-height: 1.28rem;
     }
 
-    /* Footer mínimo (si ya tenéis footer global, lo puedes reemplazar luego) */
+    /* FOOTER institucional */
     footer{
       background:#222;
-      color:#eee;
-      padding: 14px 18px;
+      color:#f2f2f2;
+      padding:18px 20px 10px;
       border-top:3px solid #d60000;
-      font-size:0.8rem;
+      font-size:0.85rem;
+      margin-top: 10px;
+    }
+
+    .footer-inner{
+      max-width:1300px;
+      margin:0 auto;
+      display:grid;
+      grid-template-columns: 2fr 1.2fr 1.2fr;
+      gap:16px;
+    }
+    @media (max-width: 900px){
+      .footer-inner{ grid-template-columns: 1fr; }
+    }
+
+    .footer-col h3{
+      margin:0 0 6px;
+      font-size:0.95rem;
+      text-transform:uppercase;
+      letter-spacing:0.03em;
+      color:#fff;
+    }
+    .footer-col p{
+      margin:0 0 4px;
+      font-size:0.82rem;
+      color:#e0e0e0;
+    }
+    .footer-col a{
+      color:#ffdddd;
+      text-decoration:none;
+      font-size:0.82rem;
+    }
+    .footer-col a:hover{ text-decoration:underline; }
+
+    .footer-logo-row{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      margin-bottom:6px;
+    }
+    .footer-logo-row img{
+      height:30px;
+      background:#d60000; /* fondo rojo para logo blanco */
+      padding:3px 6px;
+      border-radius:4px;
+    }
+
+    .footer-bottom{
+      max-width:1300px;
+      margin:10px auto 0;
+      border-top:1px solid #444;
+      padding-top:6px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:8px;
+      flex-wrap:wrap;
+    }
+
+    .footer-bottom-left{
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.78rem;
+      color:#e0e0e0;
+    }
+    .footer-bottom-left img{ height:18px; }
+
+    .footer-bottom-right{
+      font-size:0.78rem;
+      color:#bbbbbb;
+      text-align:right;
+    }
+    @media (max-width: 600px){
+      .footer-bottom{ flex-direction:column; align-items:flex-start; }
+      .footer-bottom-right{ text-align:left; }
     }
   </style>
 </head>
@@ -279,13 +365,18 @@
     Espacio abierto para consultas breves (públicas) y orientación general.
   </p>
 
-  <!-- Aviso visible -->
-  <div class="notice" style="margin-bottom:14px;">
+  <!-- Aviso + normas -->
+  <section class="notice">
     <strong>Importante:</strong> este chat es <strong>público</strong>. Evita datos personales (DNI, teléfono, direcciones, datos de salud, etc.).
     Las respuestas <strong>no son inmediatas</strong> y dependen de disponibilidad.
     Si tu consulta es <strong>urgente</strong> o requiere <strong>privacidad</strong>, utiliza
     <a href="consultas.html">Consultas sindicales</a>.
-  </div>
+    <ul class="rules">
+      <li>Consulta breve y con contexto (centro/etapa/jornada) sin identificar personas.</li>
+      <li>No se permite lenguaje ofensivo, difusión de datos personales ni contenidos discriminatorios.</li>
+      <li>Las respuestas orientan; para trámites o casos complejos se derivará a la vía de consulta formal.</li>
+    </ul>
+  </section>
 
   <!-- Chat -->
   <section class="card">
@@ -309,20 +400,61 @@
       </div>
 
       <div class="chat-box" id="chat-box" aria-live="polite"></div>
+
       <div class="small">
-        Consejo: si planteas una duda compleja, indica contexto (centro, etapa, tipo de jornada) sin aportar datos personales.
+        Consejo: para agilizar, indica si tu consulta es sobre horario, permisos, jornada, sustituciones u otra temática.
       </div>
     </div>
   </section>
 </main>
 
 <footer>
-  © <span id="anio"></span> Federación de Enseñanza de CCOO de Extremadura · Chat público
-</footer>
+  <div class="footer-inner">
+    <div class="footer-col">
+      <div class="footer-logo-row">
+        <img src="img/feccooex.png" alt="FECCOOEx">
+        <div>
+          <strong>Federación de Enseñanza de CCOO de Extremadura</strong><br>
+          <span style="font-size:0.8rem;">Herramientas digitales para la acción sindical y la comunidad educativa.</span>
+        </div>
+      </div>
+      <p>Este espacio reúne recursos públicos y sindicales para mejorar las condiciones de trabajo y la calidad de la educación en Extremadura.</p>
+    </div>
 
-<script>
-  document.getElementById("anio").textContent = new Date().getFullYear();
-</script>
+    <div class="footer-col">
+      <h3>Contacto</h3>
+      <p><strong>Dirección:</strong><br>
+        Avenida Juan Carlos I, nº 47<br>
+        CP 06800 · Mérida (Extremadura)
+      </p>
+      <p><strong>Teléfono:</strong> 924 330 018</p>
+      <p><strong>Correo:</strong> <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a></p>
+    </div>
+
+    <div class="footer-col">
+      <h3>Enlaces rápidos</h3>
+      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web FECCOOExtremadura</a></p>
+      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook FECCOOEx</a></p>
+      <p><a href="https://x.com/FECCOOex" target="_blank">X (Twitter) FECCOOEx</a></p>
+      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram FECCOOEx</a></p>
+      <p><a href="https://t.me/feccooextremadura" target="_blank">Canal de Telegram FECCOOExtremadura</a></p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <div class="footer-bottom-left">
+      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+      <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
+    </div>
+    <div class="footer-bottom-right">
+      © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
+    </div>
+  </div>
+
+  <script>
+    document.getElementById('anio-footer').textContent = new Date().getFullYear();
+  </script>
+</footer>
 
 <!-- Firebase (reemplaza SOLO el bloque firebaseConfig por el tuyo real) -->
 <script type="module">
@@ -426,7 +558,6 @@
       return;
     }
 
-    // nombre opcional
     const nombreFinal = nombre ? nombre.slice(0, 40) : "Anónimo";
 
     btnEnviar.disabled = true;
@@ -451,13 +582,14 @@
   }
 
   btnEnviar.addEventListener("click", enviarMensaje);
+
   btnLimpiar.addEventListener("click", () => {
     inputNombre.value = "";
     inputMensaje.value = "";
     estado.textContent = "";
   });
 
-  // Enter para enviar (sin saltos) / Shift+Enter para salto
+  // Enter para enviar / Shift+Enter para salto de línea
   inputMensaje.addEventListener("keydown", (ev) => {
     if (ev.key === "Enter" && !ev.shiftKey) {
       ev.preventDefault();
