--- a/chat.html
+++ b/chat.html
@@ -465,14 +465,14 @@
   } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
   // 🔴 PEGA AQUÍ TU CONFIG REAL (la que ya te funciona)
-  const firebaseConfig = {
-    apiKey: "REEMPLAZA_ESTO",
-    authDomain: "REEMPLAZA_ESTO",
-    projectId: "REEMPLAZA_ESTO",
-    storageBucket: "REEMPLAZA_ESTO",
-    messagingSenderId: "REEMPLAZA_ESTO",
-    appId: "REEMPLAZA_ESTO"
-  };
+ const firebaseConfig = {
+  apiKey: "AIzaSyDU1o7NEtPCWz6M0Q2gToZE97qmtSP72OY",
+  authDomain: "feccooex-chat.firebaseapp.com",
+  projectId: "feccooex-chat",
+  storageBucket: "feccooex-chat.firebasestorage.app",
+  messagingSenderId: "323736709612",
+  appId: "1:323736709612:web:e7a23fb298a6281882b8c9"
+};
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
@@ -600,3 +600,4 @@
 
 </body>
 </html>
+
